# kross

./: CMakeLists.txt  LICENSE  Makefile  README.md  kross.h
examples/: bezier_example.c  example_bezier.c  example_hello_triangle.c  example_hello_world.c  example_kolor.c  example_kross.c  example_lerp.c  example_perlin.c  example_pong.c  example_snake.c  example_text.c  example_triangle.c  example_voronoi.c  hello_triangle.c  hello_world.c  kolor_example.c  lerp_example.c  perlin_example.c  pong_example.c  snake_example.c  triangle_example0.c
